--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "json-server": "^1.0.0-beta.2",
+    "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.13"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@faker-js/faker": "^9.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.13",
+    "nodemon": "^3.1.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.13"
+    "tsx": "^4.19.1",
+    "typescript": "^5"
   }
 }
