--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "json-server": "^1.0.0-beta.2",
     "next": "14.2.13",
     "react": "^18",
