--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "json-server": "^1.0.0-beta.2",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.0.2",
