--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.7.7",
-    "json-server": "^1.0.0-beta.2",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "swr": "^2.2.5"
+    "swr": "^2.2.6-beta.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.0.2",
@@ -23,6 +21,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
+    "json-server": "^1.0.0-beta.2",
     "nodemon": "^3.1.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
